# RegWiFiMod

./: .gitignore  README.md
Blink_gas_Sigfox/: Blink_gas_Sigfox.ino
display_board/code/: CMakeLists.txt  functions.c  main.c  pics.h
display_board/code/i2c_slave/: CMakeLists.txt
gas_control_board/code/: CMakeLists.txt  quadrature_encoder.c  quadrature_encoder_old.c
gas_control_board/code/build_bak/: CMakeCache.txt  Makefile  cmake_install.cmake  quadrature_encoder.dis  quadrature_encoder.elf  quadrature_encoder.elf.map  quadrature_encoder.hex  quadrature_encoder.uf2
gas_control_board/code/build_bak/elf2uf2/: CMakeCache.txt  Makefile  cmake_install.cmake  elf2uf2
gas_control_board/code/build_bak/elf2uf2/boot_uf2_headers/: Makefile  cmake_install.cmake
gas_control_board/code/build_bak/i2c_slave/: Makefile  cmake_install.cmake
gas_control_board/code/build_bak/pico-sdk/: Makefile  cmake_install.cmake
gas_control_board/code/build_bak/pico-sdk/docs/: Makefile
gas_control_board/code/build_bak/pico-sdk/src/: Makefile  cmake_install.cmake
gas_control_board/code/build_bak/pico-sdk/src/common/: Makefile  cmake_install.cmake
gas_control_board/code/build_bak/pico-sdk/src/common/boot_picoboot/: Makefile
gas_control_board/code/build_bak/pico-sdk/src/common/boot_uf2/: Makefile
gas_control_board/code/build_bak/pico-sdk/src/common/pico_base/: Makefile
gas_control_board/code/build_bak/pico-sdk/src/common/pico_binary_info/: Makefile
gas_control_board/code/build_bak/pico-sdk/src/common/pico_bit_ops/: Makefile
gas_control_board/code/build_bak/pico-sdk/src/common/pico_divider/: Makefile
gas_control_board/code/build_bak/pico-sdk/src/common/pico_stdlib/: Makefile
gas_control_board/code/build_bak/pico-sdk/src/common/pico_sync/: Makefile
gas_control_board/code/build_bak/pico-sdk/src/common/pico_time/: Makefile
gas_control_board/code/build_bak/pico-sdk/src/common/pico_usb_reset_interface/: Makefile
gas_control_board/code/build_bak/pico-sdk/src/common/pico_util/: Makefile
gas_control_board/code/build_bak/pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
gas_control_board/code/build_bak/pico-sdk/src/rp2040/hardware_regs/: Makefile
gas_control_board/code/build_bak/pico-sdk/src/rp2040/hardware_structs/: Makefile
gas_control_board/code/build_bak/pico-sdk/src/rp2_common/: Makefile  cmake_install.cmake
gas_control_board/code/build_bak/pico-sdk/tools/: Makefile
gas_control_board/code/build_bak/pioasm/: CMakeCache.txt  Makefile  cmake_install.cmake
main_logic/code/: CMakeLists.txt  main_logic.c
(+324 files in other folders)
